tests/error/poly_errors_py312/bogus_bound.py
from guppylang import guppy

@guppy
def foo[T: (Copy, Bogus, Drop)](t: T) -> T:
    return t

@guppy
def main() -> None:
    foo(42)

main.check()
